-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: repo-valhalla
-
Component/s: hotspot
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/workspace/open/src/hotspot/share/opto/type.hpp:2267), pid=8342, tid=8358
# assert(_base >= KlassPtr && _base <= AryKlassPtr) failed: Not a klass pointer
#
# JRE version: Java(TM) SE Runtime Environment (21.0) (fastdebug build 21-lworld4ea-LTS-2023-04-19-1238278.tobias.hartmann.valhalla2)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 21-lworld4ea-LTS-2023-04-19-1238278.tobias.hartmann.valhalla2, mixed mode, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x1651844] LoadNode::Value(PhaseGVN*) const+0xe34
Current CompileTask:
C2: 4870 591 !b compiler.valhalla.inlinetypes.TestIntrinsics::test59 (25 bytes)
Stack: [0x00007fc4eab3e000,0x00007fc4eac3f000], sp=0x00007fc4eac3a010, free space=1008k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x1651844] LoadNode::Value(PhaseGVN*) const+0xe34 (type.hpp:2267)
V [libjvm.so+0x183b66e] PhaseCCP::analyze()+0x28e (phaseX.cpp:1848)
V [libjvm.so+0xb50b81] Compile::Optimize()+0x731 (compile.cpp:2855)
V [libjvm.so+0xb55559] Compile::Compile(ciEnv*, ciMethod*, int, Options, DirectiveSet*)+0x1959 (compile.cpp:843)
V [libjvm.so+0x947b0e] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x51e (c2compiler.cpp:113)
V [libjvm.so+0xb62b4c] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xa7c (compileBroker.cpp:2237)
V [libjvm.so+0xb63958] CompileBroker::compiler_thread_loop()+0x608 (compileBroker.cpp:1916)
V [libjvm.so+0x10d6bc6] JavaThread::thread_main_inner()+0x206 (javaThread.cpp:711)
V [libjvm.so+0x1b26140] Thread::call_run()+0x100 (thread.cpp:224)
V [libjvm.so+0x1797ce3] thread_native_entry(Thread*)+0x103 (os_linux.cpp:739)
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/workspace/open/src/hotspot/share/ci/ciMetadata.hpp:112), pid=10939, tid=10954
# assert(is_inlinetype()) failed: bad cast
#
# JRE version: Java(TM) SE Runtime Environment (21.0) (fastdebug build 21-lworld4ea-LTS-2023-04-19-1238278.tobias.hartmann.valhalla2)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 21-lworld4ea-LTS-2023-04-19-1238278.tobias.hartmann.valhalla2, mixed mode, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x6b4244] Type::inline_klass() const+0x114
Current CompileTask:
C2: 8204 640 b compiler.valhalla.inlinetypes.TestLWorld::test38 (116 bytes)
Stack: [0x00007fcbeb305000,0x00007fcbeb406000], sp=0x00007fcbeb401030, free space=1008k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x6b4244] Type::inline_klass() const+0x114 (ciMetadata.hpp:112)
V [libjvm.so+0x1b59551] TypeAryPtr::add_field_offset_and_offset(long) const+0x121 (type.cpp:5413)
V [libjvm.so+0x183b66e] PhaseCCP::analyze()+0x28e (phaseX.cpp:1848)
V [libjvm.so+0xb50b81] Compile::Optimize()+0x731 (compile.cpp:2855)
V [libjvm.so+0xb55559] Compile::Compile(ciEnv*, ciMethod*, int, Options, DirectiveSet*)+0x1959 (compile.cpp:843)
V [libjvm.so+0x947b0e] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x51e (c2compiler.cpp:113)
V [libjvm.so+0xb62b4c] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xa7c (compileBroker.cpp:2237)
V [libjvm.so+0xb63958] CompileBroker::compiler_thread_loop()+0x608 (compileBroker.cpp:1916)
V [libjvm.so+0x10d6bc6] JavaThread::thread_main_inner()+0x206 (javaThread.cpp:711)
V [libjvm.so+0x1b26140] Thread::call_run()+0x100 (thread.cpp:224)
V [libjvm.so+0x1797ce3] thread_native_entry(Thread*)+0x103 (os_linux.cpp:739)
#
# Internal Error (/workspace/open/src/hotspot/share/opto/type.hpp:2267), pid=8342, tid=8358
# assert(_base >= KlassPtr && _base <= AryKlassPtr) failed: Not a klass pointer
#
# JRE version: Java(TM) SE Runtime Environment (21.0) (fastdebug build 21-lworld4ea-LTS-2023-04-19-1238278.tobias.hartmann.valhalla2)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 21-lworld4ea-LTS-2023-04-19-1238278.tobias.hartmann.valhalla2, mixed mode, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x1651844] LoadNode::Value(PhaseGVN*) const+0xe34
Current CompileTask:
C2: 4870 591 !b compiler.valhalla.inlinetypes.TestIntrinsics::test59 (25 bytes)
Stack: [0x00007fc4eab3e000,0x00007fc4eac3f000], sp=0x00007fc4eac3a010, free space=1008k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x1651844] LoadNode::Value(PhaseGVN*) const+0xe34 (type.hpp:2267)
V [libjvm.so+0x183b66e] PhaseCCP::analyze()+0x28e (phaseX.cpp:1848)
V [libjvm.so+0xb50b81] Compile::Optimize()+0x731 (compile.cpp:2855)
V [libjvm.so+0xb55559] Compile::Compile(ciEnv*, ciMethod*, int, Options, DirectiveSet*)+0x1959 (compile.cpp:843)
V [libjvm.so+0x947b0e] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x51e (c2compiler.cpp:113)
V [libjvm.so+0xb62b4c] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xa7c (compileBroker.cpp:2237)
V [libjvm.so+0xb63958] CompileBroker::compiler_thread_loop()+0x608 (compileBroker.cpp:1916)
V [libjvm.so+0x10d6bc6] JavaThread::thread_main_inner()+0x206 (javaThread.cpp:711)
V [libjvm.so+0x1b26140] Thread::call_run()+0x100 (thread.cpp:224)
V [libjvm.so+0x1797ce3] thread_native_entry(Thread*)+0x103 (os_linux.cpp:739)
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/workspace/open/src/hotspot/share/ci/ciMetadata.hpp:112), pid=10939, tid=10954
# assert(is_inlinetype()) failed: bad cast
#
# JRE version: Java(TM) SE Runtime Environment (21.0) (fastdebug build 21-lworld4ea-LTS-2023-04-19-1238278.tobias.hartmann.valhalla2)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 21-lworld4ea-LTS-2023-04-19-1238278.tobias.hartmann.valhalla2, mixed mode, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x6b4244] Type::inline_klass() const+0x114
Current CompileTask:
C2: 8204 640 b compiler.valhalla.inlinetypes.TestLWorld::test38 (116 bytes)
Stack: [0x00007fcbeb305000,0x00007fcbeb406000], sp=0x00007fcbeb401030, free space=1008k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x6b4244] Type::inline_klass() const+0x114 (ciMetadata.hpp:112)
V [libjvm.so+0x1b59551] TypeAryPtr::add_field_offset_and_offset(long) const+0x121 (type.cpp:5413)
V [libjvm.so+0x183b66e] PhaseCCP::analyze()+0x28e (phaseX.cpp:1848)
V [libjvm.so+0xb50b81] Compile::Optimize()+0x731 (compile.cpp:2855)
V [libjvm.so+0xb55559] Compile::Compile(ciEnv*, ciMethod*, int, Options, DirectiveSet*)+0x1959 (compile.cpp:843)
V [libjvm.so+0x947b0e] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x51e (c2compiler.cpp:113)
V [libjvm.so+0xb62b4c] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xa7c (compileBroker.cpp:2237)
V [libjvm.so+0xb63958] CompileBroker::compiler_thread_loop()+0x608 (compileBroker.cpp:1916)
V [libjvm.so+0x10d6bc6] JavaThread::thread_main_inner()+0x206 (javaThread.cpp:711)
V [libjvm.so+0x1b26140] Thread::call_run()+0x100 (thread.cpp:224)
V [libjvm.so+0x1797ce3] thread_native_entry(Thread*)+0x103 (os_linux.cpp:739)