8306565: [lworld] Asserts with stress testing during PhaseCCP due to unexpected top types